--- a/polybar.config
+++ b/polybar.config
@@ -1,12 +1,12 @@
 [colours]
 bg = #191b21
+bg_alt = #2f343f
 fg = #e7e8eb
-empty_fg = #454c5c
-active_bg = #2f343f
-active_ul = #1f62b0
-urgent_bg = #ae110c
-status_l = #d3dae3
-status_d = #5c616c
+fg_alt = #d3dae3
+empty_icon = #454c5c
+status_icon = #5c616c
+blue = #1f62b0
+red = #ae110c
 
 
 [bar/panel]
@@ -62,37 +62,37 @@ format-margin = 1
 
 label-monitor = %name%
 label-monitor-foreground = ${colours.bg}
-label-monitor-background = ${colours.active_ul}
+label-monitor-background = ${colours.blue}
 label-monitor-padding = 1
 
 label-focused = %icon%
-label-focused-background = ${colours.active_bg}
-label-focused-underline = ${colours.active_ul}
+label-focused-background = ${colours.bg_alt}
+label-focused-underline = ${colours.blue}
 label-focused-padding = 1
 
 label-occupied = %icon%
 label-occupied-padding = 1
 
 label-urgent = %icon%
-label-urgent-background = ${colours.urgent_bg}
+label-urgent-background = ${colours.red}
 label-urgent-padding = 1
 
 label-empty = %icon%
-label-empty-foreground = ${colours.empty_fg}
+label-empty-foreground = ${colours.empty_icon}
 label-empty-padding = 1
 
 label-monocle = 
-label-monocle-foreground = ${colours.active_ul}
+label-monocle-foreground = ${colours.blue}
 
 
 [module/mpd]
 type = internal/mpd
 
 format-online = <icon-prev> <icon-stop> <toggle> <icon-next> <label-song>
-format-online-background = ${colours.active_bg}
+format-online-background = ${colours.bg_alt}
 format-online-padding = 1
 
-format-offline-background = ${colours.active_bg}
+format-offline-background = ${colours.bg_alt}
 format-offline-padding = 1
 
 label-song-maxlen = 50
@@ -107,7 +107,7 @@ icon-next = 
 [module/xwindow]
 type = internal/xwindow
 
-format-foreground = ${colours.status_l}
+format-foreground = ${colours.fg_alt}
 
 label = %title%
 label-maxlen = 50
@@ -122,14 +122,15 @@ interval = 10
 format-connected = <label-connected>
 format-connected-margin = 1
 format-connected-prefix = " "
-format-connected-prefix-foreground = ${colours.status_d}
+format-connected-prefix-foreground = ${colours.status_icon}
 
 format-disconnected-margin = 1
 
 label-connected = %essid%
+label-connected-foreground = ${colours.fg_alt}
 
 label-disconnected = " "
-label-disconnected-foreground = ${colours.status_d}
+label-disconnected-foreground = ${colours.status_icon}
 
 
 [module/volume]
@@ -141,15 +142,15 @@ format-volume-margin = 1
 format-muted-margin = 1
 
 label-volume = %percentage%
-label-volume-foreground = ${colours.status_l}
+label-volume-foreground = ${colours.fg_alt}
 
 label-muted = 
-label-muted-foreground = ${colours.status_d}
+label-muted-foreground = ${colours.status_icon}
 
 ramp-volume-0 = 
 ramp-volume-1 = 
 ramp-volume-2 = 
-ramp-volume-foreground = ${colours.status_d}
+ramp-volume-foreground = ${colours.status_icon}
 
 
 [module/battery]
@@ -167,16 +168,16 @@ format-discharging-padding = 1
 format-full = <ramp-capacity> <label-full>
 format-full-padding = 1
 
-label-charging-foreground = ${colours.status_l}
-label-discharging-foreground = ${colours.status_l}
-label-full-foreground = ${colours.status_l}
+label-charging-foreground = ${colours.fg_alt}
+label-discharging-foreground = ${colours.fg_alt}
+label-full-foreground = ${colours.fg_alt}
 
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
 ramp-capacity-3 = 
 ramp-capacity-4 = 
-ramp-capacity-foreground = ${colours.status_d}
+ramp-capacity-foreground = ${colours.status_icon}
 
 
 [module/date]
@@ -185,9 +186,10 @@ interval = 5
 
 format-margin = 1
 format-prefix = " "
-format-prefix-foreground = ${colours.status_d}
+format-prefix-foreground = ${colours.status_icon}
 
 label = %date%
+label-foreground = ${colours.fg_alt}
 
 date = %a, %b %d
 
@@ -198,9 +200,10 @@ interval = 5
 
 format-margin = 1
 format-prefix = " "
-format-prefix-foreground = ${colours.status_d}
+format-prefix-foreground = ${colours.status_icon}
 
 label = %time%
+label-foreground = ${colours.fg_alt}
 
 time = %R %Z
 
@@ -209,21 +212,25 @@ time = %R %Z
 type = custom/menu
 
 label-open = 
-label-open-foreground = ${colours.urgent_bg}
+label-open-foreground = ${colours.red}
 
 label-close =  cancel
-label-close-foreground = ${colours.urgent_bg}
+label-close-foreground = ${colours.red}
 
 label-separator = |
-label-separator-foreground = ${colours.status_d}
+label-separator-foreground = ${colours.status_icon}
 
 menu-0-0 = logout
 menu-0-0-exec = loginctl terminate-session $XDG_SESSION_ID
+menu-0-0-foreground = ${colours.fg_alt}
 menu-0-1 = suspend
 menu-0-1-exec = systemctl suspend
+menu-0-1-foreground = ${colours.fg_alt}
 menu-0-2 = reboot
 menu-0-2-exec = systemctl reboot
+menu-0-2-foreground = ${colours.fg_alt}
 menu-0-3 = power off
 menu-0-3-exec = systemctl poweroff
+menu-0-3-foreground = ${colours.fg_alt}
 
 ; vim:ft=dosini
