--- a/polybar.config
+++ b/polybar.config
@@ -8,29 +8,30 @@ status_icon = #5c616c
 blue = #1f62b0
 red = #ae110c
 
+[settings]
+screenchange-reload = true
 
 [bar/panel]
 monitor = ${env:MONITOR:eDP-1}
 override_redirect = true
 
 width = 100%
-height = 32
+height = 30
 offset-x = 0
 offset-y = 0
 
 background = ${colours.bg}
 foreground = ${colours.fg}
 
-spacing = 1
 padding-left = 0
 padding-right = 1
-module-margin-left = 0
-module-margin-right = 0
+module-margin = 0
 
 underline-size = 2
+underline-color = ${colours.blue}
 
-font-0 = NotoMono:size=10;0
-font-1 = FontAwesome:size=10;0
+font-0 = NotoMono:size=10;2
+font-1 = FontAwesome:size=10;2
 
 modules-left = bspwm mpd
 modules-center =
