--- a/polybar.config
+++ b/polybar.config
@@ -32,6 +32,7 @@ underline-color = ${colours.blue}
 
 font-0 = NotoMono:size=10;2
 font-1 = FontAwesome:size=10;2
+font-2 = Symbola:size=10;2
 
 modules-left = bspwm mpd
 modules-center =
