--- a/polybar.config
+++ b/polybar.config
@@ -30,7 +30,7 @@ module-margin = 0
 underline-size = 2
 underline-color = ${colours.blue}
 
-font-0 = NotoMono:size=10;2
+font-0 = DejaVuSansMono:size=10;2
 font-1 = FontAwesome:size=10;2
 font-2 = Symbola:size=10;2
 
@@ -231,7 +231,7 @@ label-open-foreground = ${colours.red}
 label-close =  cancel
 label-close-foreground = ${colours.red}
 
-label-separator = |
+label-separator = │
 label-separator-foreground = ${colours.status_icon}
 
 menu-0-0 = logout
