--- a/.gitmodules
+++ b/.gitmodules
@@ -30,7 +30,7 @@
 	url = https://github.com/tpope/vim-pathogen.git
 [submodule "vim/ruby"]
 	shallow = true
-	path = vim/bundles/programming/ruby
+	path = vim/bundles/syntax/ruby
 	url = https://github.com/vim-ruby/vim-ruby.git
 [submodule "vim/sneak"]
 	shallow = true
@@ -66,7 +66,7 @@
 	url = https://github.com/maxbrunsfeld/vim-yankstack.git
 [submodule "vim/rust"]
 	shallow = true
-	path = vim/bundles/programming/rust
+	path = vim/bundles/syntax/rust
 	url = https://github.com/rust-lang/rust.vim.git
 [submodule "vim/fastfold"]
 	shallow = true
@@ -78,5 +78,13 @@
 	url = https://github.com/vim-latex/vim-latex.git
 [submodule "vim/sxhkdrc"]
 	shallow = true
-	path = vim/bundles/other/sxhkdrc
+	path = vim/bundles/syntax/sxhkdrc
 	url = https://github.com/baskerville/vim-sxhkdrc.git
+[submodule "vim/toml"]
+	shallow = true
+	path = vim/bundles/syntax/toml
+	url = https://github.com/cespare/vim-toml.git
+[submodule "vim/git"]
+	shallow = true
+	path = vim/bundles/syntax/git
+	url = https://github.com/tpope/vim-git.git
