--- a/i3.config
+++ b/i3.config
@@ -159,6 +159,6 @@ bar {
 
 # PulseAudio bindings for volume keys
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle && killall -SIGUSR1 i3status
-bindsym $mod+XF86AudioMute exec --no-startup-id pactl set-sink-volume 0 -- 0% && pactl set-sink-mute 0 1 && killall -SIGUSR1 i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -- -2% && killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 -- +2% && killall -SIGUSR1 i3status
+bindsym $mod+XF86AudioMute exec --no-startup-id pactl set-sink-volume 0 0% && pactl set-sink-mute 0 1 && killall -SIGUSR1 i3status
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -2% && killall -SIGUSR1 i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +2% && killall -SIGUSR1 i3status
