--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,7 @@
 set -g default-terminal "tmux-256color"
 set -g terminal-overrides "xterm-256color:Tc"
 set -g default-command "${SHELL}"
+set -g escape-time 0
 set -g history-limit 4096
 set -g set-titles on
 set -g set-titles-string "#W"
