--- a/dirmngr.conf
+++ b/dirmngr.conf
@@ -1,5 +1,5 @@
 keyserver hkps://hkps.pool.sks-keyservers.net
-hkp-cacert /home/panagiotis/.gnupg/cacert.d/sks-keyservers.netCA.pem
+hkp-cacert /usr/share/gnupg/sks-keyservers.netCA.pem
 log-file /home/panagiotis/.gnupg/dirmngr.log
 debug-level basic
 verbose
